# Lumina

./: .gitignore  Cargo.toml  README.md
crates/lumina-chat/: Cargo.toml
crates/lumina-chat/src/: client.rs  config.rs  context.rs  lib.rs  sse.rs  types.rs
crates/lumina-cli/: Cargo.toml
crates/lumina-cli/src/: config.rs  main.rs  runner.rs
crates/lumina-compute/: Cargo.toml
crates/lumina-compute/src/: backend.rs  cpu.rs  distributed.rs  gpu.rs  lib.rs
crates/lumina-compute/src/shaders/: matrix_assemble.wgsl  matvec.wgsl
crates/lumina-core/: Cargo.toml
crates/lumina-core/src/: fields.rs  lib.rs  mie.rs  nonlinear.rs  periodic.rs  time_domain.rs  types.rs
crates/lumina-core/src/solver/: ewald.rs  mod.rs  sommerfeld.rs  substrate.rs
crates/lumina-core/src/solver/cda/: assembly.rs  direct.rs  fft_matvec.rs  greens.rs  iterative.rs  mod.rs
crates/lumina-core/tests/: cda_convergence.rs  cda_diagnostic.rs  gpu_benchmark.rs  mie_validation.rs  v012_v013_features.rs
crates/lumina-geometry/: Cargo.toml
crates/lumina-geometry/src/: discretise.rs  ellipsoid.rs  lattice.rs  lib.rs  primitives.rs  scene.rs  transform.rs
crates/lumina-geometry/src/parsers/: cif.rs  mod.rs  obj.rs  xyz.rs
crates/lumina-gui/: Cargo.toml
crates/lumina-gui/src/: app.rs  main.rs
crates/lumina-gui/src/panels/: chat.rs  geometry.rs  materials.rs  mod.rs  results.rs  scene.rs  simulation.rs
crates/lumina-materials/: Cargo.toml
crates/lumina-materials/src/: dft.rs  johnson_christy.rs  lib.rs  palik.rs  provider.rs  spline.rs
docs/: book.toml
docs/images/: README.md
docs/plans/: 2026-03-01-v022-persistent-gpu-buffers-design.md  2026-03-02-complex-assemblies-design.md  2026-03-04-v030-design.md
docs/src/: SUMMARY.md  introduction.md
docs/src/developer/: architecture.md  compute-backends.md  contributing.md  new-solver.md
docs/src/roadmap/: extensions.md  versions.md
docs/src/theory/: cda.md  greens-function.md  mie-theory.md  nonlinear.md  periodic.md  validation.md
docs/src/tutorials/: 01-gold-nanosphere.md  02-nanorod.md  03-near-field.md  04-chiral-helix.md  05-custom-material.md  06-gpu-acceleration.md  index.md
docs/src/user-guide/: cli.md  configuration.md  geometry.md  gui.md  installation.md  materials.md  quick-start.md
docs/superpowers/specs/: 2026-03-14-v050-design.md
examples/: au_icosahedron_k6.xyz  chiral_dimer.toml  gold_sphere.toml  gold_sphere_quick.toml
tests/: mie_validation.rs
