[workspace]
members = [
    "crates/lumina-core",
    "crates/lumina-compute",
    "crates/lumina-geometry",
    "crates/lumina-materials",
    "crates/lumina-gui",
    "crates/lumina-cli",
]
resolver = "2"

[workspace.package]
version = "0.2.1"
edition = "2021"
authors = ["Lumina Contributors"]
license = "Apache-2.0"
rust-version = "1.75"

[workspace.dependencies]
# Linear algebra
ndarray = "0.16"
num-complex = { version = "0.4", features = ["serde"] }
faer = "0.20"

# Serialisation
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }

# Parallelism
rayon = "1.10"

# GPU compute
wgpu = "24"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
log = "0.4"
env_logger = "0.11"

# GUI
eframe = "0.29"
egui = "0.29"

# Interpolation
nalgebra = "0.33"

# Testing
approx = "0.5"

# Workspace crates
lumina-core = { path = "crates/lumina-core" }
lumina-compute = { path = "crates/lumina-compute" }
lumina-geometry = { path = "crates/lumina-geometry" }
lumina-materials = { path = "crates/lumina-materials" }
