[package]
name = "lumina-chat"
description = "OpenAI-compatible chat client for the Lumina GUI"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
reqwest      = { workspace = true }
tokio        = { workspace = true }
futures-util = "0.3"
dirs         = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
toml         = { workspace = true }
log          = { workspace = true }
egui         = { workspace = true, optional = true }

lumina-core     = { workspace = true }
lumina-geometry = { workspace = true }

[features]
default = []
gui = ["dep:egui"]
