[package]
name = "lumina-cli"
description = "Command-line interface for headless Lumina simulation runs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = []
gpu = ["lumina-core/gpu", "lumina-compute/gpu"]

[dependencies]
clap = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
anyhow = { workspace = true }
num-complex = { workspace = true }

rayon = { workspace = true }

lumina-core = { workspace = true }
lumina-geometry = { workspace = true }
lumina-materials = { workspace = true }
lumina-compute = { workspace = true }
