[package]
name = "lumina-compute"
description = "Compute backend abstraction for LuminaCDA (CPU, GPU, distributed)"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = ["cpu"]
cpu = ["rayon"]
gpu = []          # wgpu-based GPU compute (future)
distributed = []  # MPI multi-node (future)

[dependencies]
ndarray = { workspace = true }
num-complex = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
rayon = { workspace = true, optional = true }
