[package]
name = "lumina-compute"
description = "Compute backend abstraction for Lumina (CPU, GPU, distributed)"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = ["cpu"]
cpu = ["rayon"]
gpu = ["wgpu", "pollster", "bytemuck"]
distributed = []  # MPI multi-node (future)

[dependencies]
ndarray = { workspace = true }
num-complex = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
rayon = { workspace = true, optional = true }
wgpu = { workspace = true, optional = true }
pollster = { workspace = true, optional = true }
bytemuck = { workspace = true, optional = true }
