[package]
name = "lumina-gui"
description = "Interactive GUI dashboard for the Lumina framework"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
eframe = { workspace = true }
egui = { workspace = true }
egui_plot = "0.29"
rfd = "0.15"
serde_json = { workspace = true }
num-complex = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }

lumina-core = { workspace = true }
lumina-geometry = { workspace = true }
lumina-materials = { workspace = true }
lumina-compute = { workspace = true }
